# gportal-python

./: .flake8  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: package-publish.yml  python.yml
docs/: api.md
docs/api/: dataset.md  datasets.md  file.md  product.md  search.md  sftp.md
docs/examples/: basic.ipynb  gcomc.ipynb  search.ipynb  sftp.ipynb
examples/: search.ipynb
gportal/: __init__.py  dataset.py  datasets.py  http_client.py  product.py  search.py  sftp.py
gportal/data/: datasets.json
gportal/file/: __init__.py  gcomc.py
scripts/: refresh_datasets_cache.py
tests/: test_dataset.py  test_datasets.py  test_product.py  test_search.py  test_sftp.py
tests/file/: test_gcomc.py
