[project]
requires-python = ">=3.9"

[tool.poetry]
name = "gportal"
version = "0.3.0"
description = "Client for JAXA G-Portal Catalogue Service and SFTP"
authors = ["Takahiro Miyoshi <takahiro-miyoshi@sankichi.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sankichi92/gportal-python"
documentation = "https://gportal.readthedocs.io/"
packages = [{include = "gportal"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
paramiko = "^3.1.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.1.0"}
ruff = "^0.0.260"
mypy = "^1.1.1"
types-requests = "^2.28.11.16"
types-paramiko = "^3.0.0.4"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
responses = "^0.23.1"

[tool.poetry.group.notebook.dependencies]
notebook = "^6.5.3"
geopandas = "^0.12.2"
matplotlib = "^3.7.1"
folium = "^0.14.0"
mapclassify = "^2.5.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.1.4"
mkdocs-jupyter = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = ["call-overload"]
