[project]
requires-python = "~=3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gportal"
version = "0.4.0"
description = "Client for JAXA G-Portal Catalogue Service and SFTP"
authors = ["Takahiro Miyoshi <takahiro-miyoshi@sankichi.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sankichi92/gportal-python"
documentation = "https://gportal.readthedocs.io/"
packages = [{include = "gportal"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
paramiko = "^3.1.0"
h5py = {version = "^3.8.0", optional = true}
rasterio = {version = "^1.3.6", optional = true}
numpy = {version = "^1.18", optional = true}

[tool.poetry.extras]
gcomc = ["h5py", "rasterio", "numpy"]

[tool.poetry.group.dev.dependencies]
h5py = "^3.8.0"
rasterio = "^1.3.6"
black = {extras = ["jupyter"], version = "^23.1.0"}
ruff = "^0.0.260"
pyright = "^1.1.306"
types-requests = "^2.28.11.16"
types-paramiko = "^3.0.0.4"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
responses = "^0.23.1"

[tool.poetry.group.notebook.dependencies]
notebook = "^6.5.3"
geopandas = "^0.12.2"
matplotlib = "^3.7.1"
folium = "^0.14.0"
mapclassify = "^2.5.0"
rioxarray = "^0.14.0"
cartopy = "^0.21.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.1.4"
mkdocs-jupyter = "^0.24.1"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
